<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/text_color_white"
        android:elevation="@dimen/_10sdp"
        android:layoutDirection="locale"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:layoutDirection="locale"
            android:padding="5dp"
            android:src="@drawable/back_drawable" />

        <com.longercave.app.Utils.MyBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/payment"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layoutDirection="locale"
        android:orientation="vertical">

        <com.longercave.app.Utils.MyBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_methods"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

        <RelativeLayout
            android:id="@+id/cash_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layoutDirection="locale">

            <ImageView
                android:id="@+id/cash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/money_icon" />

            <com.longercave.app.Utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/cash"
                android:gravity="center_vertical"
                android:text="@string/selected_payment_mode"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/tick_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_tick"
                android:visibility="gone" />

        </RelativeLayout>

        <com.longercave.app.Utils.MyBoldTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_money"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />

        <com.longercave.app.Utils.MyBoldTextView
            android:id="@+id/empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="(empty)"
            android:textSize="16sp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/payment_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layoutDirection="locale" />

        <com.longercave.app.Utils.MyBoldTextView
            android:id="@+id/addCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/add_payments"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>