<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/text_color_white"
    tools:context="com.longercave.app.Activities.CouponActivity">

    <LinearLayout
        android:id="@+id/lnrHeadings"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/text_color_white"
        android:elevation="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:src="@drawable/back_drawable" />

        <com.longercave.app.Utils.MyBoldTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/action_coupon"
            android:textColor="@color/black_text_color"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_money_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/lnrHeadings"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.longercave.app.Utils.MyBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_coupon_txt"
                android:textColor="@color/black_text_color"
                android:textSize="16sp"
                android:visibility="gone" />


            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                app:lottie_autoPlay="true"
                app:lottie_fileName="coupon.json"
                app:lottie_loop="true" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                app:cardElevation="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:orientation="vertical">

                    <com.longercave.app.Utils.MyBoldTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:gravity="start"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/add_coupon_code"
                        android:textDirection="locale" />

                    <com.longercave.app.Utils.MyEditText
                        android:id="@+id/coupon_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:padding="@dimen/_10sdp"
                        android:gravity="start"
                        android:background="@drawable/edittext_bg"
                        android:hint="@string/enter_the_coupon"
                        android:inputType="textCapCharacters"
                        android:textDirection="locale" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardListViewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_above="@+id/apply_button"
        android:layout_below="@+id/add_money_card"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <com.longercave.app.Utils.MyBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/added_coupon"
                android:textColor="@color/black_text_color"
                android:textSize="16sp" />

            <ListView
                android:id="@+id/coupon_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>


    </LinearLayout>

    <com.longercave.app.Utils.MyButton
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true"
        android:text="@string/apply"
        android:textColor="@color/text_color_white" />
</RelativeLayout>
