<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.longercave.app.Activities.WelcomeScreenActivity">

    <RelativeLayout
        android:background="@color/background_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonLayout"
        android:orientation="vertical"
        android:weightSum="1">


        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />



        <!-- Dots Layout-->

        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"></LinearLayout>

        <!-- Skip Button-->

        <TextView
            android:textAllCaps="true"
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="26dp"
            android:gravity="end"
            android:visibility="gone"
            android:text="Skip"
            android:textColor="@color/theme"
            android:textSize="16dp" />


    </RelativeLayout>

    <LinearLayout
        android:background="@color/background_color"
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_above="@+id/social_layout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/sign_in"
            android:textColor="@color/colorTextWhite" />

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:textColor="@color/colorTextWhite"
            android:background="@color/colorPrimary"
            android:text="@string/signup" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/social_layout"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.longercave.app.Utils.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/or_connect_with_social_media"
            android:textColor="@color/wallet_holo_blue_light"
            android:textSize="@dimen/_14sdp"
            android:visibility="visible" />

    </LinearLayout>

</RelativeLayout>
